syntax = "proto3";

package user.v1;

option go_package = "github.com/practical6/proto/user/v1;userv1";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}

message User {
  uint32 id = 1;
  string name = 2;
  string email = 3;
  bool is_cafe_owner = 4;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  bool is_cafe_owner = 3;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  uint32 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUsersRequest {}

message GetUsersResponse {
  repeated User users = 1;
}
